--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -135,7 +135,7 @@
                              function (response) {
                                 var cadena = response.split("&");
                                  if (cadena[0] == "1") {
-                                     window.location = '@Url.Action("Index", "Juego")';
+                                     window.location = '@Url.Action("Index", "tipoJuego")';
                                  }
                                  else {
                                      //alert("Usuario inválido");
