--- a/Views/Individual/Individual.cshtml
+++ b/Views/Individual/Individual.cshtml
@@ -976,7 +976,31 @@
         left: 280px;
         top: 250px;
     }
-    
+    #cro1 {
+        height: 40px;
+        border-radius: 50px;
+        font-size: 20px;
+        font-weight: bold;
+        position: absolute;
+        font-family: 'kaushan Script', cursive;
+        width: 300px;
+        left: 20px;
+        top: 300px;
+        visibility: hidden;
+    }
+
+    #Cronometro {
+        height: 30px;
+        font-size: 20px;
+        font-weight: bold;
+        position: absolute;
+        text-align: center;
+        font-family: 'kaushan Script', cursive;
+        width: 100px;
+        left: 275px;
+        top: 300px;
+        visibility: hidden;
+    }
 
 </style>
 <body>
@@ -1090,8 +1114,12 @@
     <input id="Repetir" type="submit" value=" Volver a Jugar" onclick="location.href='@Url.Action("Individual", "Individual")'">
     <label id="jugador1">Jugador 1:</label>
     <input id="j1" type="text" disabled="disabled" />
-    <input id="mov1" type="text" vale="d" disabled="disabled" />
+    <input id="mov1" type="text"  disabled="disabled" />
     <label id="movi1"></label>
+    <div class="Cronometro">
+        <p id="Cronometro"><span id="minutos">00</span>:<span id="segundos">00</span></p>
+    </div>
+    <label id="cro1"></label>
     <input id="acepta" type="button" value="Aceptar" onclick="Empezar()" />
     <input id="Ruta" type="text" value="" required="" />
     <input id="Mostrar" type="submit" value=" Mostrar Ficha " />
@@ -1116,7 +1144,13 @@
                          success:
                              function (response) {
                                  var cadena = response;
-                                 document.getElementById("j1").value = cadena;
+                                 if (cadena == "") {
+                                     document.getElementById("j1").value = "prueba1";
+                                 }
+                                 else {
+                                     document.getElementById("j1").value = cadena;
+                                 }
+                                 
                              },
                          error:
                              function (response) {
@@ -1301,6 +1335,40 @@
             });
         </script>
         <script>
+            var totalSegundos;
+            var totalMinutos;
+            var cronometro;
+
+            function empezarCronometro() {
+                segundosTotales = 0;
+                segundo = document.getElementById("segundos");
+                minuto = document.getElementById("minutos");
+                segundo.innerHTML = "00";
+                minuto.innerHTML = "00";
+                cronometro = setInterval(function () {
+                    segundosTotales++;
+                    secs = segundosTotales;
+                    mins = 0;
+                    while (secs >= 60) {
+                        mins++;
+                        secs -= 60;
+                    }
+                    if (mins < 10) minuto.innerHTML = "0" + mins;
+                    else minuto.innerHTML = mins;
+                    if (secs < 10) segundo.innerHTML = "0" + secs;
+                    else segundo.innerHTML = secs;
+
+                    totalSegundos = secs;
+                    totalMinutos = mins;
+
+                }, 1000);
+            }
+
+            function reinicioCronometro() {
+                clearInterval(cronometro);
+                empezarCronometro();
+            }
+
             function movimientosCarga(x, y) {
                 horizontal(x + y);
                 horizontal2(x + y);
@@ -1325,6 +1393,9 @@
                     document.getElementById("mov1").style.visibility = "visible";
                     document.getElementById("movi1").style.visibility = "visible";
                     document.getElementById("movi1").innerHTML = "   Movimientos de " + jug1 + ":";
+                    document.getElementById("Cronometro").style.visibility = "visible";
+                    document.getElementById("cro1").style.visibility = "visible";
+                    document.getElementById("cro1").innerHTML = "   Cronómetro";
                     document.getElementById("mov1").value = movimiento1;
                     document.getElementById("jugador1").style.display = "none";
                     document.getElementById("acepta").style.display = "none";
@@ -1343,7 +1414,7 @@
                 else {
                     var posiciones = ["A1", "B1", "C1", "D1", "E1", "F1", "G1", "H1", "A2", "B2", "C2", "D2", "E2", "F2", "G2", "H2", "A3", "B3", "C3", "D3", "E3", "F3", "G3", "H3", "A4", "B4", "C4", "D4", "E4", "F4", "G4", "H4", "A5", "B5", "C5", "D5", "E5", "F5", "G5", "H5", "A6", "B6", "C6", "D6", "E6", "F6", "G6", "H6", "A7", "B7", "C7", "D7", "E7", "F7", "G7", "H7", "A8", "B8", "C8", "D8", "E8", "F8", "G8", "H8"];
                     posiciones.forEach(function (i) {
-                        document.getElementById(i).disabled = true; //
+                        document.getElementById(i).disabled = false; //
                     });
                     jug1 = document.getElementById("j1").value;
                         document.getElementById("D4").style.background = "white";
@@ -1355,6 +1426,9 @@
                         document.getElementById("movi1").style.visibility = "visible";
                         document.getElementById("movi1").innerHTML = "   Movimientos de " + jug1 + ":";
                         document.getElementById("mov1").value = movimiento1;
+                        document.getElementById("Cronometro").style.visibility = "visible";
+                        document.getElementById("cro1").style.visibility = "visible";
+                        document.getElementById("cro1").innerHTML = "   Cronómetro";
                         document.getElementById("jugador1").style.display = "none";
                         document.getElementById("acepta").style.display = "none";
                         document.getElementById("Mostrar").style.display = "none";
@@ -1389,7 +1463,7 @@
                         }
 
                 }
-
+                empezarCronometro();
             };
 
             function Blanquitas() {
@@ -1987,6 +2061,7 @@
                 var fichaMarcar = "";
                 var id = (x + y);
                 posicionesGuardar(id);
+                reinicioCronometro();
                 horizontal(x + y);
                 horizontal2(x + y);
                 vertical1(x + y);
@@ -2307,7 +2382,7 @@
                     setTimeout(function () {
                         var aleatorio = Math.floor(Math.random() * fichasMaquina.length);
                         try {
-                        document.getElementById(fichasMaquina[aleatorio]).style.background = "white";
+                            document.getElementById(fichasMaquina[aleatorio]).style.background = "white";
                         }
                         catch (error) {
                             conteoError = 0;
