--- a/Views/Tablero/Tablero.cshtml
+++ b/Views/Tablero/Tablero.cshtml
@@ -20,645 +20,11 @@
         left: 500px;
         background: #747772;
     }
-
-    #A1 {
-        position: absolute;
+    .botones{
         border-radius: 300px;
-        top: 5px;
-        left: 7px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #B1 {
-        position: absolute;
-        border-radius: 300px;
-        top: 5px;
-        left: 57px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #C1 {
-        position: absolute;
-        border-radius: 300px;
-        top: 5px;
-        left: 107px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #D1 {
-        position: absolute;
-        border-radius: 300px;
-        top: 5px;
-        left: 157px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #E1 {
-        position: absolute;
-        border-radius: 300px;
-        top: 5px;
-        left: 207px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #F1 {
-        position: absolute;
-        border-radius: 300px;
-        top: 5px;
-        left: 257px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #G1 {
-        position: absolute;
-        border-radius: 300px;
-        top: 5px;
-        left: 307px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #H1 {
-        position: absolute;
-        border-radius: 300px;
-        top: 5px;
-        left: 357px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #A2 {
-        position: absolute;
-        border-radius: 300px;
-        top: 55px;
-        left: 7px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #B2 {
-        position: absolute;
-        border-radius: 300px;
-        top: 55px;
-        left: 57px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #C2 {
-        position: absolute;
-        border-radius: 300px;
-        top: 55px;
-        left: 107px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #D2 {
-        position: absolute;
-        border-radius: 300px;
-        top: 55px;
-        left: 157px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #E2 {
-        position: absolute;
-        border-radius: 300px;
-        top: 55px;
-        left: 207px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #F2 {
-        position: absolute;
-        border-radius: 300px;
-        top: 55px;
-        left: 257px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #G2 {
-        position: absolute;
-        border-radius: 300px;
-        top: 55px;
-        left: 307px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #H2 {
-        position: absolute;
-        border-radius: 300px;
-        top: 55px;
-        left: 357px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #A3 {
-        position: absolute;
-        border-radius: 300px;
-        top: 105px;
-        left: 7px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #B3 {
-        position: absolute;
-        border-radius: 300px;
-        top: 105px;
-        left: 57px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #C3 {
-        position: absolute;
-        border-radius: 300px;
-        top: 105px;
-        left: 107px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #D3 {
-        position: absolute;
-        border-radius: 300px;
-        top: 105px;
-        left: 157px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #E3 {
-        position: absolute;
-        border-radius: 300px;
-        top: 105px;
-        left: 207px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #F3 {
-        position: absolute;
-        border-radius: 300px;
-        top: 105px;
-        left: 257px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #G3 {
-        position: absolute;
-        border-radius: 300px;
-        top: 105px;
-        left: 307px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #H3 {
-        position: absolute;
-        border-radius: 300px;
-        top: 105px;
-        left: 357px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #A4 {
-        position: absolute;
-        border-radius: 300px;
-        top: 155px;
-        left: 7px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #B4 {
-        position: absolute;
-        border-radius: 300px;
-        top: 155px;
-        left: 57px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #C4 {
-        position: absolute;
-        border-radius: 300px;
-        top: 155px;
-        left: 107px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #D4 {
-        position: absolute;
-        border-radius: 300px;
-        top: 155px;
-        left: 157px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #E4 {
-        position: absolute;
-        border-radius: 300px;
-        top: 155px;
-        left: 207px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #F4 {
-        position: absolute;
-        border-radius: 300px;
-        top: 155px;
-        left: 257px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #G4 {
-        position: absolute;
-        border-radius: 300px;
-        top: 155px;
-        left: 307px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #H4 {
-        position: absolute;
-        border-radius: 300px;
-        top: 155px;
-        left: 357px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #A5 {
-        position: absolute;
-        border-radius: 300px;
-        top: 205px;
-        left: 7px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #B5 {
-        position: absolute;
-        border-radius: 300px;
-        top: 205px;
-        left: 57px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #C5 {
-        position: absolute;
-        border-radius: 300px;
-        top: 205px;
-        left: 107px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #D5 {
-        position: absolute;
-        border-radius: 300px;
-        top: 205px;
-        left: 157px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #E5 {
-        position: absolute;
-        border-radius: 300px;
-        top: 205px;
-        left: 207px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #F5 {
-        position: absolute;
-        border-radius: 300px;
-        top: 205px;
-        left: 257px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #G5 {
-        position: absolute;
-        border-radius: 300px;
-        top: 205px;
-        left: 307px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #H5 {
-        position: absolute;
-        border-radius: 300px;
-        top: 205px;
-        left: 357px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #A6 {
-        position: absolute;
-        border-radius: 300px;
-        top: 255px;
-        left: 7px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #B6 {
-        position: absolute;
-        border-radius: 300px;
-        top: 255px;
-        left: 57px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #C6 {
-        position: absolute;
-        border-radius: 300px;
-        top: 255px;
-        left: 107px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #D6 {
-        position: absolute;
-        border-radius: 300px;
-        top: 255px;
-        left: 157px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #E6 {
-        position: absolute;
-        border-radius: 300px;
-        top: 255px;
-        left: 207px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #F6 {
-        position: absolute;
-        border-radius: 300px;
-        top: 255px;
-        left: 257px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #G6 {
-        position: absolute;
-        border-radius: 300px;
-        top: 255px;
-        left: 307px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #H6 {
-        position: absolute;
-        border-radius: 300px;
-        top: 255px;
-        left: 357px;
-        font-size: 25px;
         border: none;
         background: transparent;
-    }
-
-    #A7 {
-        position: absolute;
-        border-radius: 300px;
-        top: 305px;
-        left: 7px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #B7 {
-        position: absolute;
-        border-radius: 300px;
-        top: 305px;
-        left: 57px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #C7 {
-        position: absolute;
-        border-radius: 300px;
-        top: 305px;
-        left: 107px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #D7 {
-        position: absolute;
-        border-radius: 300px;
-        top: 305px;
-        left: 157px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #E7 {
-        position: absolute;
-        border-radius: 300px;
-        top: 305px;
-        left: 207px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #F7 {
-        position: absolute;
-        border-radius: 300px;
-        top: 305px;
-        left: 257px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #G7 {
-        position: absolute;
-        border-radius: 300px;
-        top: 305px;
-        left: 307px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #H7 {
-        position: absolute;
-        border-radius: 300px;
-        top: 305px;
-        left: 357px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #A8 {
-        position: absolute;
-        border-radius: 300px;
-        top: 355px;
-        left: 7px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #B8 {
-        position: absolute;
-        border-radius: 300px;
-        top: 355px;
-        left: 57px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #C8 {
-        position: absolute;
-        border-radius: 300px;
-        top: 355px;
-        left: 107px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #D8 {
-        position: absolute;
-        border-radius: 300px;
-        top: 355px;
-        left: 157px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #E8 {
-        position: absolute;
-        border-radius: 300px;
-        top: 355px;
-        left: 207px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #F8 {
-        position: absolute;
-        border-radius: 300px;
-        top: 355px;
-        left: 257px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #G8 {
-        position: absolute;
-        border-radius: 300px;
-        top: 355px;
-        left: 307px;
-        font-size: 25px;
-        border: none;
-        background: transparent;
-    }
-
-    #H8 {
-        position: absolute;
-        border-radius: 300px;
-        top: 355px;
-        left: 357px;
         font-size: 25px;
-        border: none;
-        background: transparent;
     }
 
     #LA1 {
