--- a/Views/Juego/Index.cshtml
+++ b/Views/Juego/Index.cshtml
@@ -80,6 +80,18 @@
             background: #D9D950;
             font-weight: bold;
         }
+        #TamañoMN {
+            font-family: 'kaushan Script', cursive;
+            position: absolute;
+            left: 600px;
+            top: 500px;
+            width: 300px;
+            height: 40px;
+            border-radius: 50px;
+            font-size: 20px;
+            background: #D9D950;
+            font-weight: bold;
+        }
         #botonEditar {
             font-family: 'kaushan Script', cursive;
             position: absolute;
@@ -107,5 +119,5 @@
     <br>
     <br>
     <input id="Salir" type="submit" value="Salir" onclick="location.href='@Url.Action("Index", "tipoJuego")'">
-    </body>
+</body>
 </html>
